app-dev/styles/base/layout.css
/* ... */
	.f-list.keywords > li .keyword {
		display: block;
		margin: 0 0.8rem 0.8rem 0;
		border-style: solid;
		border-width: 1px;
		padding: 0.5rem 0;
		line-height: 1rem;
		text-align: center;
		font-size: 0.75rem;
		cursor: pointer;
	}


.f-list.fund-net-worth-trend-chart-legend {
	font-size: 0.5rem;
	}

	.f-list.fund-net-worth-trend-chart-legend > li {
		position: relative;
		padding-left: 0.6rem;
		margin-left: 1.4rem;
		line-height: 1rem;
	}

	.f-list.fund-net-worth-trend-chart-legend > li .legend-symbol {
		display: block;
		width: 0.4rem;
		height: 0.4rem;
		border-radius: 1000px;
		position: absolute;
		left: 0;
		top: 0;
		bottom: 0;
		margin: auto 0;
	}


.poststamp {
	background-repeat: no-repeat;
	background-image: url(../../images/_common/poststamp-w200px.png);
	width: 10rem;
	height: 10rem;
	background-size: 10rem auto;
	}
	.poststamp.poststamp-yi-shi-xiao { background-position: 0   0;    }
	.poststamp.poststamp-yi-zhi-fu   { background-position: 0 -10rem; }
	.poststamp.poststamp-yi-hui-kuan { background-position: 0 -20rem; }

	.f-block-body .row.has-lead-icon .lead-icon.poststamp {
		background-image: url(../../images/_common/poststamp-w90px.png);
		width: 2.25rem;
		height: 2.25rem;
		background-size: 2.25rem auto;
	}
	.f-block-body .row.has-lead-icon .lead-icon.poststamp.poststamp-yi-shi-xiao { background-position: 0   0;    }
	.f-block-body .row.has-lead-icon .lead-icon.poststamp.poststamp-yi-zhi-fu   { background-position: 0 -2.25rem; }
	.f-block-body .row.has-lead-icon .lead-icon.poststamp.poststamp-yi-hui-kuan { background-position: 0 -4.5rem; }


.entity-info {
	font-size: 1rem;
	}
	.row .entity-info {
		padding: 0;
		margin: -0.5rem -0.8rem;
	}
	.entity-info .entity-body {
		display: block;
		padding: 0.5rem 0.8rem;
	}

	.entity-info .call-to-action {
		display: none;
		width: 4.5rem;
		height: 3rem;
		text-align: right;
		white-space: nowrap;
	}


	.entity-body {
		}
		.entity-body .product-caption-block {
			line-height: 1rem;
			margin: 0.3rem 0 0 0;
			font-weight: 500;
		}
		.entity-body .favorite-entity-icon {
			position: absolute;
			right: 0;
			top: 0;
			font-size: 0.9rem;
			margin: 0.9rem 0.7rem 0 0;
		}

		.entity-body .f-list {
			width: 100%;
			padding: 0.5rem;
			margin: 0 -0.5rem 0;
			text-align: left;
			}
			.entity-body .f-list > a > .cell,
			.entity-body .f-list     > .cell {
				display: inline-block;
				vertical-align: top;
				position: relative;
				padding: 0.25rem;
				margin: -0.25rem;
				width: 55%;
				text-align: left;
			}

			.entity-body .f-list > a > .cell:last-child,
			.entity-body .f-list     > .cell:last-child {
				width: 45%;
			}

			.entity-body .f-list.columns-count-3 > a > .cell:first-child,
			.entity-body .f-list.columns-count-3     > .cell:first-child {
				width: 33%;
			}
			.entity-body .f-list.columns-count-3 > a > .cell:nth-child(2),
			.entity-body .f-list.columns-count-3     > .cell:nth-child(2) {
				width: 33%;
			}
			.entity-body .f-list.columns-count-3 > a > .cell:last-child,
			.entity-body .f-list.columns-count-3     > .cell:last-child {
				width: 34%;
			}

			@media only screen and (max-width: 330px) { /* iPhone 4/4S/5/5S/SE */
				.entity-body .f-list.columns-count-3 > a > .cell:first-child,
				.entity-body .f-list.columns-count-3     > .cell:first-child {
					width: 32%;
				}
				.entity-body .f-list.columns-count-3 > a > .cell:nth-child(2),
				.entity-body .f-list.columns-count-3     > .cell:nth-child(2) {
					width: 33%;
				}
				.entity-body .f-list.columns-count-3 > a > .cell:last-child,
				.entity-body .f-list.columns-count-3     > .cell:last-child {
					width: 35%;
				}
			}

			.entity-body .f-list.columns-justify > a:first-child  > .cell,
			.entity-body .f-list.columns-justify                  > .cell:first-child {
				text-align: left;
			}
			.entity-body .f-list.columns-justify > a:nth-child(2) > .cell,
			.entity-body .f-list.columns-justify                  > .cell:nth-child(2) {
				text-align: center;
			}
			.entity-body .f-list.columns-justify > a:last-child   > .cell,
			.entity-body .f-list.columns-justify                  > .cell:last-child {
				text-align: right;
			}

			.entity-body .f-list > a > .cell *,
			.entity-body .f-list     > .cell * {
				line-height: 1;
			}
			.entity-body .f-list > a > .cell > .label,
			.entity-body .f-list     > .cell > .label {
				display: block;
				font-size: 0.6rem;
				font-weight: lighter;
				white-space: nowrap;
				margin-top: 0.1rem;
				margin-bottom: 0.5rem;
			}
			.entity-body .f-list > a > .cell > .content,
			.entity-body .f-list     > .cell > .content {
				display: block;
				font-size: 1rem;
				line-height: 1rem;
				white-space: nowrap;
				height: 1rem;
				padding: 0.6rem 0 0 0;
			}
			.entity-body .f-list > a > .cell.hero > .content,
			.entity-body .f-list     > .cell.hero > .content {
				font-size: 1.6em;
				padding-top: 0!important;
				height: 1.6rem;
			}

			@media only screen and (max-width: 330px) { /* iPhone 4/4S/5/5S/SE */
				.entity-body .f-list > a > .cell > .content,
				.entity-body .f-list     > .cell > .content {
					padding-top: 0.3rem;
				}
				.entity-body .f-list > a > .cell.hero > .content,
				.entity-body .f-list     > .cell.hero > .content {
					font-size: 1.3em;
					height: 1.3rem;
				}
			}


			.entity-body .f-list > a > .cell > .content .digits,
			.entity-body .f-list     > .cell > .content .digits {
				font-weight: 300;
			}


			.entity-body .f-list.labels-at-bottom > a > .cell,
			.entity-body .f-list.labels-at-bottom     > .cell {
				padding-bottom: 1rem; 
			}
			.entity-body .f-list.labels-at-bottom > a > .cell > .label,
			.entity-body .f-list.labels-at-bottom     > .cell > .label {
				position: absolute;
				bottom: 0.1rem;
				margin: 0 auto;
			}


			.entity-body .f-list.labels-at-left {
				padding: 0.5rem;
				margin: -0.5rem;
				}
/* ... */

